<resources>
    <string name="app_name">SaludarteApp</string>
    <string name="Register">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="titulo">Saludarte</string>
    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_email_label">El email no es valido.</string>
    <string name="error_pass_label">El password no puede estar vacio.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="email_label">Email</string>
    <string name="password_label">Contraseña</string>
    <string name="confirm_password_label">Vuelve a ingresar la contraseña</string>
    <string name="action_logout">Cerrar Sesión\n</string>
    <string-array name="alarms">
            <item>Aviso para despertar</item>
            <item>Desayunar</item>
            <item>Almorzar</item>
            <item>Comer</item>
            <item>Descanso</item>
            <item>Actividad</item>
            <item>Clase</item>
            <item>Dormir</item>
        </string-array>
</resources>